--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emoji-mart": "^2.11.2",
-    "firebase": "^7.9.3",
+    "firebase": "^7.14.1",
     "md5": "^2.2.1",
     "mime-types": "^2.1.26",
     "moment": "^2.24.0",
@@ -44,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
